kompose/dash-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.30.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: dash-frontend
  name: dash-frontend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: dash-frontend
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.version: 1.30.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/kompose-default: "true"
        io.kompose.service: dash-frontend
    spec:
      containers:
        - image: dash-frontend
          name: dash-frontend
          ports:
            - containerPort: 8060
              hostPort: 8060
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /tmp
              name: dash-frontend-claim0
      restartPolicy: Always
      volumes:
        - name: dash-frontend-claim0
          persistentVolumeClaim:
            claimName: dash-frontend-claim0
status: {}
