kompose/fastapi-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.30.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: fastapi-backend
  name: fastapi-backend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: fastapi-backend
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.version: 1.30.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/kompose-default: "true"
        io.kompose.service: fastapi-backend
    spec:
      containers:
        - image: fastapi-backend
          name: fastapi-backend
          ports:
            - containerPort: 8059
              hostPort: 8059
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /tmp
              name: fastapi-backend-claim0
      restartPolicy: Always
      volumes:
        - name: fastapi-backend-claim0
          persistentVolumeClaim:
            claimName: fastapi-backend-claim0
status: {}
