kompose/panoptes-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.30.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: panoptes
  name: panoptes
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: panoptes
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.version: 1.30.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/kompose-default: "true"
        io.kompose.service: panoptes
    spec:
      containers:
        - args:
            - panoptes
            - -v
            - --port
            - "8058"
          image: quay.io/biocontainers/panoptes-ui:0.2.3--pyh7cba7a3_0
          name: panoptes
          ports:
            - containerPort: 8058
              hostPort: 8058
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: .
              name: panoptes-claim0
      restartPolicy: Always
      volumes:
        - name: panoptes-claim0
          persistentVolumeClaim:
            claimName: panoptes-claim0
status: {}
