kompose/pika-publisher-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.30.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: pika-publisher
  name: pika-publisher
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pika-publisher
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.version: 1.30.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/kompose-default: "true"
        io.kompose.service: pika-publisher
    spec:
      containers:
        - image: pika-publisher
          name: pika-publisher
          resources: {}
          volumeMounts:
            - mountPath: /tmp
              name: pika-publisher-claim0
            - mountPath: /data
              name: pika-publisher-claim1
      restartPolicy: Always
      volumes:
        - name: pika-publisher-claim0
          persistentVolumeClaim:
            claimName: pika-publisher-claim0
        - name: pika-publisher-claim1
          persistentVolumeClaim:
            claimName: pika-publisher-claim1
status: {}
