kompose/rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.30.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: rabbitmq
  name: rabbitmq
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: rabbitmq
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.version: 1.30.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/kompose-default: "true"
        io.kompose.service: rabbitmq
    spec:
      containers:
        - args:
            - rabbitmq-server
          image: rabbitmq:management
          name: rabbitmq
          ports:
            - containerPort: 15672
              hostPort: 15672
              protocol: TCP
            - containerPort: 5672
              hostPort: 5672
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
