kompose/dash_frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.30.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: dash-frontend
  name: dash_frontend
  namespace: default
spec:
  ports:
    - name: "8060"
      port: 8060
      targetPort: 8060
  selector:
    io.kompose.service: dash-frontend
status:
  loadBalancer: {}
