kompose/fastapi_backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.30.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: fastapi-backend
  name: fastapi_backend
  namespace: default
spec:
  ports:
    - name: "8059"
      port: 8059
      targetPort: 8059
  selector:
    io.kompose.service: fastapi-backend
status:
  loadBalancer: {}
