kompose/panoptes-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.30.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: panoptes
  name: panoptes
  namespace: default
spec:
  ports:
    - name: "8058"
      port: 8058
      targetPort: 8058
  selector:
    io.kompose.service: panoptes
status:
  loadBalancer: {}
